# rusty16

./: .gitignore  Cargo.toml
src/: bin.rs  cpu.rs  dis.rs  flags.rs  instruction.rs  lib.rs  macros.rs  memory.rs  opcode.rs  screen.rs  surface.rs
