[package]
name = "rusty16"
version = "0.1.0"
edition = "2018"

[lib]
name = "rusty16"
path = "src/lib.rs"

[[bin]]
name = "rusty16"
path = "src/bin.rs"

[[bin]]
name = "rusty16-dis"
path = "src/dis.rs"

[dependencies]
byteorder = "*"
log = "*"
env_logger = "*"
enum_primitive = "*"
rand = "*"

[dependencies.sdl2]
version = "0.34"
features = ["bundled"]

[profile.release]
debug = true
opt-level = 3
